@@ -17,24 +17,13 @@
 				</noscript>
 				<div id="t3-nocookies-error" class="t3-login-alert t3-login-alert-warning" style="display:none">
 					<h2>###ERROR_COOKIES###</h2>
+					<div id="t3-nocookies-ignore"><a href="#"  onclick="TYPO3BackendLogin.hideCookieWarning()">###ERROR_COOKIES_IGNORE###</a></div>
 				</div>
 				<div id="t3-login-process" style="display: none">
 					<h2>###LOGIN_PROCESS###</h2>
 				</div>
 				###FORM###
 				<div class="t3-login-bottomBorder"></div>
-				<script type="text/javascript">
-				/*<![CDATA[*/
-					document.cookie = "typo3-login-cookiecheck";
-					cookieEnabled = (document.cookie.indexOf("typo3-login-cookiecheck") != -1) ? true : false;
-					if (cookieEnabled) {
-						document.getElementById("t3-login-form-fields").style.display = 'block';
-					}
-					else {
-						document.getElementById("t3-nocookies-error").style.display = 'block';
-					}
-				/*]]>*/
-				</script>
 				<script type="text/javascript" src="sysext/t3skin/resources/login.js"></script>
 			</div>
 			<div class="shadow-box-bottom-424"></div>
